--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body{
 }
 .destination-content {
     position: absolute;
-    bottom: 10%;
+    bottom: 20%;
     width: 80%;
     left: 10%;
     right: 10%;
@@ -239,6 +239,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
+    
 }
 .destination-content h4 {
     font-size: 24px;
@@ -276,7 +278,7 @@ body{
     background-color: #fff;
     margin-bottom: 30px;
     border: 1px solid #ddd;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 10px 10px;
 }
 .single-package img{
     width: 100%;
@@ -511,6 +513,9 @@ body{
         flex-basis: 48% !important;
         margin-bottom: 30px;
     }
+    .food-name{
+        padding-top:6px;
+    }
 }
 
 /* Mobile Layout responsive*/
@@ -570,6 +575,9 @@ body{
     .single-footer {
         flex-basis: 100% !important;
         margin-bottom: 30px;
+    }
+    .food-name{
+        padding-top:6px;
     }
 }
 /* testimonial css */
